Fixed modals which causes overflow: hidden for body tag.

--- a/LocalCommunityVotingPlatform/ClientApp/src/css/Style.css
+++ b/LocalCommunityVotingPlatform/ClientApp/src/css/Style.css
@@ -98,3 +98,7 @@ body {
     width: 100%;
     height: 500px;
 }
+
+.modal-open {
+    overflow: visible;
+}
